Putting new post on Executor framework